# A2A

./: .gitignore  404.html  CHANGELOG.md  README.md  READMEPRIMERO.md  index.html  mkdocs.yml  objects.inv  package-lock.json  sitemap.xml
.github/workflows/: docs.yml
community/: index.html
demo/ui/: pyproject.toml
docs/: documentation.md  python-sdk.md  specification.md
docs/specification/: agent-card.md  agent-to-agent-communication.md  sample-messages.md
docs/topics/: key-concepts.md  streaming-and-async.md
documentation/: index.html
partners/: index.html
samples/python/: pyproject.toml
samples/python/agents/a2a_mcp/: pyproject.toml
samples/python/agents/a2a_mcp/agent_cards/: air_ticketing_agent.json  car_rental_agent.json  hotel_booking_agent.json  orchestrator_agent.json  planner_agent.json  reimbursement_agent.json
samples/python/agents/a2a_mcp/src/a2a_mcp/: __init__.py
samples/python/agents/a2a_mcp/src/a2a_mcp/agents/: __main__.py  activity_planner_agent.py  adk_travel_agent.py  langgraph_planner_agent.py  task_executor_agent.py
samples/python/agents/a2a_mcp/src/a2a_mcp/common/: agent_runner.py  base_agent.py  prompts.py  task_manager.py  types.py  utils.py
samples/python/agents/a2a_mcp/src/a2a_mcp/mcp/: client.py  server.py
samples/python/agents/ag2/: __main__.py  agent_executor.py  task_manager.py
samples/python/agents/crewai/: __main__.py  agent.py  agent_executor.py  task_manager.py
samples/python/agents/extended_agent_card_adk/: README.md  __main__.py  agent.py  pyproject.toml  task_manager.py
samples/python/agents/google_adk/: __main__.py  agent.py  agent_executor.py  task_manager.py
samples/python/agents/langgraph/: __main__.py  agent_executor.py  task_manager.py
samples/python/agents/llama_index_file_chat/: __main__.py  agent.py  agent_executor.py  task_manager.py
samples/python/agents/marvin/: __main__.py  agent_executor.py  task_manager.py
samples/python/agents/mindsdb/: __main__.py  agent.py  agent_executor.py  task_manager.py
samples/python/agents/semantickernel/: __main__.py  agent_executor.py  task_manager.py
samples/python/agents/veo_videogen_google_adk/: README.md  __main__.py  agent.py  pyproject.toml  task_manager.py
samples/python/common/: types.py
samples/python/common/client/: client.py
samples/python/common/server/: __init__.py  server.py  task_manager.py
samples/python/common/utils/: push_notification_auth.py
samples/python/employee_agent/: README.md  __main__.py  agent_executor.py  create_db.py
samples/python/employee_agent/.well-known/: agent.json
samples/python/hosts/cli/: __main__.py
samples/python/hosts/extended_agent_card_cli/: README.md  __main__.py  pyproject.toml
samples/python/hosts/multiagent/: host_agent.py  remote_agent_connection.py
sdk/: a2a_sdk-0.2.1a1.post13.dev0+3368783-py3-none-any.whl
sdk/python/: index.html
search/: search_index.json
spec-json/: index.html
specification/: index.html
specification/agent-card/: index.html
tests/: test_a2a_spec.py
topics/: index.html
tutorials/: index.html
(+62 files in other folders)
